src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>AE_Instructions__c</fullName>
        <label>AE Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Buy_Rate_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Buy Rate Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Premium_MCA_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Premium MCA Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>User Type must be Standard SalesForce.</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.OwnerId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Notification_Override__c</fullName>
        <formula>IF(
 BD_Send_Cmpn_Owner__c=&quot;gmackenzie@rapidadvance.com&quot; ||
 BD_Send_Cmpn_Owner__c=&quot;rfleischmann@rapidadvance.com&quot; ||
 BD_Send_Addtl_Owner__c=&quot;gmackenzie@rapidadvance.com&quot; ||
 BD_Send_Addtl_Owner__c=&quot;rfleischmann@rapidadvance.com&quot;,
true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Notification to BD Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD_Send_Addtl_Owner__c</fullName>
        <label>Send Notifications Additional Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BD_Send_Cmpn_Owner__c</fullName>
        <label>Send Notifications Campaign Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BD_Send_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will send notifications to Campaign Owners if this flag is enabled.</description>
        <inlineHelpText>Send notifications to Primary Campaign Owner(s) upon Stage change.</inlineHelpText>
        <label>Send Notifications to BD Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Suppression_Date__c</fullName>
        <formula>ISO_Account__r.Bonus_Suppression_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Suppression Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bonus_Suppression_Old__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This partner is not eligible to receive Rapid bonuses and is exempt from any bonus exceptions.</description>
        <label>Bonus Suppression (Old)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Suppression__c</fullName>
        <formula>ISO_Account__r.Bonus_Suppression__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buy_Rate_Max_Upsell_Commission__c</fullName>
        <label>Buy Rate Max Upsell Commission</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Campaign_Contact_Email__c</fullName>
        <description>contact&apos;s email address</description>
        <label>Campaign Contact Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Contact_Number__c</fullName>
        <description>Contacts phone number</description>
        <label>Campaign Contact Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Contact__c</fullName>
        <description>The partner contact person</description>
        <label>Campaign Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name_for_reporting__c</fullName>
        <description>Use this field in place of the Campaign Name when used in reports,workflows,assignment rules...etc.</description>
        <label>Campaign Name (for reporting)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Notes__c</fullName>
        <label>Campaign Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <label>Campaign Source</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Brokers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase Paymentech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humboldt Merchant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merrick Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBSLynk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier I Acquirers/ISOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier II Acquirers/ISOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier III Acquirers/ISOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier IV Acquirers/ISOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TriSource Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Sensitive_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case-Sensitive ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claw_back_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claw-back language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collections_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collections Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partners</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Pending, In Progress, Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Collections Account)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitive_Pricing_Clause__c</fullName>
        <label>Competitive Pricing Clause</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Received_Signed2__c</fullName>
        <label>Contract Received &amp; Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Received_Signed__c</fullName>
        <formula>ISO_Account__r.Contract_Received_Signed__c</formula>
        <label>Contract Received &amp; Signed_OLD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <label>Contract Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cost_per_funded_deal__c</fullName>
        <formula>Total_Lead_Cost__c / NumberOfWonOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost per funded deal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Decline_Program_Effective_Date__c</fullName>
        <label>Decline Program Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decline_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Decline Program Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Lead_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignsleadOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CampaignsAssociated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_not_offer_Decline_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>With the new partner type ( bank/ credit union etc) that we will not want to market the decline program with we will need a check box on the campaign or account level that is labeled.</description>
        <label>Do not offer Decline Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Signature_Permitted__c</fullName>
        <label>E-Signature Permitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Executed_Contract_Sent__c</fullName>
        <label>Executed Contract Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Five9_DNIS__c</fullName>
        <label>Five9 DNIS</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallNow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets Five9 callNowMode to &apos;ANY&apos;</description>
        <inlineHelpText>All new campaign members are added to Five9 list with &apos;call now mode&apos; set to &apos;ANY&apos;</inlineHelpText>
        <label>Five9 Call Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Endpoint__c</fullName>
        <label>Five9 WS Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Password__c</fullName>
        <label>Five9 User Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ReportEmail__c</fullName>
        <label>Five9 Report Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Five9__Five9User__c</fullName>
        <label>Five9 User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9list__c</fullName>
        <description>Five9 dialing list name</description>
        <label>Five9list</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Contract_Commission_Base__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Partner is to be paid on the Full Contract Amount on any and all Renewal deals</description>
        <label>Full Contract Commission Base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funded_Date__c</fullName>
        <formula>Opportunity__r.Funded_by_WC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gross_Leads__c</fullName>
        <label>Gross Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISO_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_MCA_Commission_Base__c</fullName>
        <label>MCA Initial Commission Base</label>
        <picklist>
            <picklistValues>
                <fullName>Advance Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payback Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jan_09_CPL__c</fullName>
        <label>Jan 09 CPL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Leads_Marketing_Cost__c</fullName>
        <label>Leads Marketing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Leads_per_Hour__c</fullName>
        <label>Leads per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Loan__c</fullName>
        <label>New Loan Commission</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_MCA_Initial_Commission__c</fullName>
        <description>New ISO Initial MCA Commission</description>
        <label>New MCA Initial Commission</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_MCA_Residual_Commission__c</fullName>
        <label>New MCA Residual Commission</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Leads__c</fullName>
        <formula>NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P2_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner signed through the P2 relationship</description>
        <label>P2 User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POS_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner signed through our P2/POS relationship</description>
        <label>POS Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Bank_Wiring_Instructions__c</fullName>
        <label>Partner Bank Wiring Instructions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Category__c</fullName>
        <label>Partner Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Backed Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Processor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Leasing Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Quality Originator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Volume Originator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Generator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Assistant_Name2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Sales Assistant Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Sales Assistants</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Sales_Assistant__c</fullName>
        <description>Email Addresses of Sales Assistant assigned to this partner</description>
        <label>Partner Sales Assistant Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pricing Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Partner w/ AE Assigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Qual_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Qual Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Qual_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Qual Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_MCA_Effective_Date__c</fullName>
        <label>Premium MCA Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price_Per_Closed_Deal__c</fullName>
        <formula>ActualCost  /  NumberOfWonOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Per Closed Deal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Per_Lead__c</fullName>
        <description>Cost per lead.</description>
        <label>Price Per Lead</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProMED_Campaigns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProMED Campaigns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <description>Code used to identify promotional marketing material such as postcards.</description>
        <label>Promotion Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Loan_Commission__c</fullName>
        <label>Renewal Loan Commission</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_MCA_Initial_Commission__c</fullName>
        <label>Renewal MCA Initial Commission</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_MCA_Residual_Commission__c</fullName>
        <label>Renewal MCA Residual Commission</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Response_Rate__c</fullName>
        <formula>Gross_Leads__c/NumberSent</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SWIFT_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SWIFT Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Member #1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Member #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Member #3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Update_On_Renewals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Update On Renewals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Uncheck to stop updates</inlineHelpText>
        <label>Send Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Split_Fund_Set_Up__c</fullName>
        <label>Split Fund Set Up</label>
        <picklist>
            <picklistValues>
                <fullName>Rapid Advance Chooses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS - Rocky Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Starter_and_Loan_Amendment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Starter and Loan Amendment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Campaign_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Campaign Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suppress_Site_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Site Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Syndication_Agreement_Received__c</fullName>
        <label>Syndication Agreement Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Syndication_Agreement_Sent__c</fullName>
        <label>Syndication Agreement Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Syndication_Campaign_Name__c</fullName>
        <label>Syndication Campaign Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syndication_Notes__c</fullName>
        <label>Syndication Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syndication_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Syndication Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Targeted_Product__c</fullName>
        <label>Targeted Product</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Telemarketing_Cost__c</fullName>
        <label>Telemarketing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <label>Temp</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Emails_Sent__c</fullName>
        <formula>NumberOfContacts +  NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lead_Cost__c</fullName>
        <formula>NumberOfLeads * Price_Per_Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lead Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Marketing_Cost__c</fullName>
        <formula>ActualCost + Telemarketing_Cost__c + Leads_Marketing_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marketing Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Signed__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Partner_Email_1__c</fullName>
        <label>Update Partner Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Update_Partner_Email_2__c</fullName>
        <label>Update Partner Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Update_Partner_Email_3__c</fullName>
        <label>Update Partner Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>W_9_Form_Received__c</fullName>
        <label>W-9 Form Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Welcome_Package_Sent__c</fullName>
        <label>Welcome Package Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>White_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>White Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4_Month_Amendment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Month Amendment Received</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Split_Fund_Set_Up__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>Partners</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>1/1/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2012 12:00 AM</value>
        </filters>
        <label>All Active Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Source_View</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Campaign_Source__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>Campaign_Contact__c</columns>
        <columns>Campaign_Contact_Email__c</columns>
        <columns>Campaign_Contact_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>Campaign Source View</label>
        <sharedTo>
            <group>BusinessDevelopmentandManagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_Campaigns</fullName>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Total_Emails_Sent__c</columns>
        <columns>CAMPAIGN.NUM_SENT</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>Email,newsletter,renewal</value>
        </filters>
        <label>Email Campaigns</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>